--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -99,8 +99,8 @@ services:
           has_issues: $parameter.issues || true
           enable_traceability: $parameter.trace || true
   build:
-    #$parameter: 'pipeline'
-    #$default: 'p1'
+    $parameter: 'pipeline'
+    $default: 'p1'
     $options:
       - $ifdef: 'p1'
         service_id: pipeline
