--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -1,7 +1,7 @@
 version: '2'
 template:
-  name: "Dynamic YML - $options/$ifdef & $parameters - Testing Toolchain"
-  description: "Dynamic YML - $options/$ifdef & $parameters - Testing Toolchain"
+  name: "Dynamic YML - $options/$ifdef/$parameters - Testing Toolchain"
+  description: "Dynamic YML - $options/$ifdef/$parameters - Testing Toolchain"
   required:
     - build
     - frontend-repo
@@ -11,7 +11,7 @@ template:
     git branch: >-
       [master](https://github.com/tonymcguckin/dynamicyml/tree/master)
 toolchain:
-  name: 'Dynamic YML - $options/$ifdef & $parameters - Testing Toolchain'
+  name: 'Dynamic YML - $options/$ifdef/$parameters - Testing Toolchain'
 services:
 
   # dynamic yml 'services' entry...
