--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -38,8 +38,8 @@ services:
         service_id: githubpublic
         parameters:
           repo_name: 'BYOC MyApp'
-          repo_url: '{{app_repo}}'
-          type: 'link'
+          repo_url: $env.app_repo || 'http://blah.com/repo'
+          type: $env.type || 'link'
           visibility: public
 
       - $case: 'github_integrated'
