--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -25,7 +25,7 @@ services:
 
       - $expr: $env.source_provider
 
-      - $default: ''
+      - $foodefault: ''
   
       - $case: 'githubpublic'
         service_id: githubpublic
