--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -44,6 +44,32 @@ services:
           has_issues: true
           enable_traceability: true
 
+  # dynamic yml 'service' entry...
+  sample-repo2:
+
+    $switch:
+
+      - $expr: $env.source_provider
+
+      - $default: ''
+  
+      - $case: 'githubpublic'
+        service_id: githubpublic
+        parameters:
+          repo_name: 'BYOC MyApp'
+          repo_url: $env.app_repo || 'http://blah.com/repo'
+          type: $env.type || 'link'
+          visibility: public
+
+      - $case: 'github_integrated'
+        service_id: github_integrated
+        parameters:
+          repo_name: 'BYOC MyApp'
+          repo_url: '{{app_repo}}'
+          type: 'link'
+          has_issues: true
+          enable_traceability: true
+
 form:
   pipeline:
     parameters:
