--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -25,7 +25,13 @@ services:
 
       - $expr: $env.source_provider
 
-      - $ggggggdefault: hostedgit
+      - $default: hostedgit
+        service_id: githubpublic
+        parameters:
+          repo_name: 'BYOC MyApp'
+          repo_url: $env.app_repo || 'http://blah.com/repo'
+          type: $env.type || 'link'
+          visibility: public
   
       - $case: 'githubpublic'
         service_id: githubpublic
