--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -26,11 +26,12 @@ services:
       - $expr: $env.source_provider
 
       - $default: hostedgit
-        service_id: githubpublic
+        service_id: hostedgit
         parameters:
           repo_name: 'BYOC MyApp'
           repo_url: $env.app_repo || 'http://blah.com/repo'
           type: $env.type || 'link'
+          foo4: $env.foo4 || 'japp'
           visibility: public
   
       - $case: 'githubpublic'
