--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -25,13 +25,7 @@ services:
 
       - $expr: $env.source_provider
 
-      - $default: hostedgit
-        service_id: hostedgit
-        parameters:
-          repo_name: 'BYOC MyApp'
-          repo_url: $env.app_repo || 'http://blah.com/repo'
-          type: $env.type || 'link'
-          visibility: public
+      - $default: ''
   
       - $case: 'githubpublic'
         service_id: githubpublic
