--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -25,6 +25,15 @@ services:
 
       - $expr: $env.source_provider
   
+      - $default: 'hostedgit'
+        service_id: hostedgit
+        parameters:
+          repo_name: 'BYOC MyApp'
+          repo_url: $env.app_repo || 'http://blah.com/repo'
+          type: $env.type || 'clone'
+          foo: $env.foo
+          visibility: public
+  
       - $case: 'githubpublic'
         service_id: githubpublic
         parameters:
