--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -33,8 +33,8 @@ services:
           repo_url: $env.app_repo || 'http://blah.com/repo'
           type1: $env.type1 || "fo'rk'eee"
           type2: $env.type2 || "Can't do this!"
-          foo: $env.foo == 'foo' ? 'bar' : 'http://blah.com/repo'
-          bar: $env.foo == 'foo' ? 99.99 : 199.98
+          foo: "$env.foo == 'foo' ? 'bar' : 'http://blah.com/repo'"
+          bar: "$env.foo == 'foo' ? 99.99 : 199.98"
           type: $env.type || 'clone'
           foo1: $env.foo
           visibility: public
