--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -27,17 +27,16 @@ services:
 
       - $expr: $env.source_provider
   
-      - $default: true
+      - $default: "hostedgit"
         service_id: hostedgit
         parameters:
-          repo_url: $env.app_repo || 'http://blah.com/repo'
-          type1: $env.type1 || "fo'rk'eee"
-          type2: $env.type2 || "Can't do this!"
-          foo: "$env.foo == 'foo' ? 'bar' : 'http://blah.com/repo'"
-          bar: "$env.foo == 'foo' ? 99.99 : 199.98"
-          type: $env.type || 'clone'
-          foo1: $env.foo
-          visibility: public
+          test1: $env.test || 'http://blah.com/repo'
+          test2: $env.test || "fo'rk'eee"
+          test3: $env.test || "Can't do this!"
+          test4: "$env.test == 'foo' ? 'bar' : 'http://blah.com/repo'"
+          test5: "$env.test == 'foo' ? 99.99 : 199.98"
+          test6: $env.test || 'clone'
+          test7: $env.test
 
 form:
   pipeline:
