--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -31,13 +31,13 @@ services:
         service_id: hostedgit
         parameters:
           test1: $env.test1 || 'http://blah.com/repo'
-          test2: $env.test2 || "fo'rk'eee"
-          test3: $env.test3 || "Can't do this!"
-          test4: "$env.test4 == 'foo' ? 'bar' : 'http://blah.com/repo'"
-          test5: "$env.test5 == 'foo' ? 99.99 : 199.98"
-          test6: $env.test6 || 'clone'
-          test7: "$env.test6 || {{a}} is {{b}}"
-          test8: $env.test7
+          #test2: $env.test2 || "fo'rk'eee"
+          #test3: $env.test3 || "Can't do this!"
+          #test4: "$env.test4 == 'foo' ? 'bar' : 'http://blah.com/repo'"
+          #test5: "$env.test5 == 'foo' ? 99.99 : 199.98"
+          #test6: $env.test6 || 'clone'
+          #test7: "$env.test6 || {{a}} is {{b}}"
+          #test8: $env.test7
 
 form:
   pipeline:
