--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -30,8 +30,8 @@ services:
       - $default: "hostedgit"
         service_id: hostedgit
         parameters:
-          test1: $env.test1
-          #test1: '$env.test1 || $env.test2'
+          #test1: $env.test1
+          test1: $env.test1 || $env.test2
           #test1: $env.test1 || '{{a}} and {{b}}'
           #test1: $env.test1 || 'http://blah.com/repo'
           #test2: $env.test2 || "fo'rk'eee"
