--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -31,7 +31,7 @@ services:
         service_id: hostedgit
         parameters:
           test1: $env.test1
-          test2: $env.test1 || $env.test2 + $env.test3
+          test2: $env.test1 || $env.test1 + ' ' + $env.test1
           test3: $env.test1 || '{{a}} and {{b}}'
           test4: $env.test1 || {{a}} and {{b}}
           test5: $env.test1 || "{{f}} can't be {{x}}"
@@ -40,7 +40,8 @@ services:
           test8: $env.test1 || "Can't do this!"
           test9: "$env.test1 == 'foo' ? 'bar' : 'http://blah.com/repo'"
           test10: "$env.test1 == 'foo' ? 99.99 : 199.98"
-          test11: $env.test1 || 'clone'
+          test11: "$env.test1 == $env.test1 ? 'yes' : 'no'"
+          test12: $env.test1 || 'clone'
 
 form:
   pipeline:
